2006-06-19  Karl Berry  <karl@gnu.org>

	* system.h: move to top level.
	* */Makefile.am (AM_CPPFLAGS): no longer need -I$(top_srcdir)/lib.

	* makeinfo/makeinfo.c (getdocumenttext): replace with a modified
	version of get_title from gettext, as suggested by Bruno Haible,
	back on 2 Dec 2003.
	* gnulib: import xsetenv module.
	
	* doc/texinfo.tex (\indexdotfill): back to regular (non-italic)
	periods, suggested by Werner Lemberg and others.

2006-06-19  Akim Demaille  <akim@epita.fr>

	Support dvips and dvipdf for sake of pstricks, and to
	spare the use tweaking TEXINPUTS.
	* util/defs.in (optionset_get, assert_and_remove_files): New.
	* util/texi2dvi (out_lang_tex, out_lang_ext): New.
	Use them.
	($language): Rename as...
	($in_lang): this for consistency.
	Support --dvipdf and --ps.
	Not documented yet.
	* util/dvipdf.test: New.
	* util/Makefile.am (TESTS): Adjust.
	* util/texi2dvi.tests (one_run): New.

2006-06-18  Karl Berry  <karl@gnu.org>

	* gnulib: new subdirectory, managed by gnulib-tool.
	* m4: delete entire subdirectory, now replaced by gnulib/m4.
	* build-aux: new subdirectory.
	* README.dev: doc.
	* autogen.sh: aclocal needs -I gnulib/m4 now.
	* Makefile.am, util/Makefile.am, lib/Makefile.am, info/Makefile.am,
	  makeinfo/Makefile.am (AM_CPPFLAGS, LDADD): use new gnulib dirs.
	* lib/alloca.c, lib/getopt*, lib/gettext.h, lib/mem*, lib/str*,
	  etc.: delete, now using gnulib modules (as recorded in
	  gnulib/m4/gnulib-cache.m4)

2006-06-08  Karl Berry  <karl@gnu.org>

	* po/Makevars (XGETTEXT_OPTIONS): add --keyword=__, so that the
	gettext will mark the new __ strings (2006-05-29 change from
	Norbert) for translation again.

2006-06-07  <Ralf.Wildenhues@gmx.de>

	* makeinfo/footnote.c (output_pending_notes): Use
	add_html_block_elt instead of add_word for final part of
	footnote, so no extra <p> is output.

2006-06-05  Akim Demaille  <akim@epita.fr>

	* util/bibtex.test: Add it for real.

2006-06-03  Karl Berry  <karl@gnu.org>
